--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'American wit and humor'
 - !lcc 'PN'
+- GITenberg
 tableOfContents: A Plea for Humor / A. Repplier -- An Unmarried Female / M. Holley
   -- Selections from a Brace of Boys / F. Ludlow -- Rheumatism Movement Cure / R.
   J. Burdette -- An Aphorism and a Lecture / O. W. Holmes -- The Harp of a Thousand
